# geojson

./: .travis.yml  CHANGES.md  Cargo.toml  README.md  bors.toml  example-output-countries.geojson  geometry.rs
.github/workflows/: rust.yml
benches/: parse.rs  serialize.rs  to_geo_types.rs
examples/: deserialize.rs  deserialize_to_geo_types.rs  deserialize_to_geojson_types.rs  geojson_to_string.rs  stream_reader_writer.rs
src/: conversion.rs  crs.rs  de.rs  errors.rs  feature.rs  feature_collection.rs  feature_iterator.rs  feature_reader.rs  feature_writer.rs  geojson.rs  geojson_raw.rs  geometry.rs  lib.rs  lib.rustc_serialize.rs.in  lib.serde.rs.in  macros.rs  main.rs  object.rs  position.rs  ser.rs  util.rs
src/conversion/: from_geo_types.rs  mod.rs  to_geo_types.rs
src/geo_traits_impl/: coord.rs  geometry.rs  geometry_collection.rs  line_string.rs  mod.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  point.rs  polygon.rs
src/types/: feature.rs  featurecollection.rs  geometry.rs  geometrycollection.rs  linestring.rs  mod.rs  multilinestring.rs  multipoint.rs  multipolygon.rs  point.rs  poly.rs  polygon.rs  pos.rs  ring.rs
tests/: roundtrip.rs
tests/fixtures/: README.md  countries.geojson  geometry_collection.geojson
tests/fixtures/canonical/: good-feature-with-id.geojson  good-feature-with-string-id.geojson  good-feature.geojson  good-featurecollection-bbox.geojson  good-featurecollection-bbox3d.geojson  good-featurecollection-extensions.geojson  good-featurecollection.geojson  good-geometrycollection.geojson  good-linestring.geojson  good-multilinestring.geojson  good-multipoint.geojson  good-point-3d.geojson  good-point.geojson  good-polygon.geojson  multipolygon.geojson  nullgeometry.geojson
